--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,11 @@
 pipeline {
     agent any
     stages{
+        stage('Checkout') {
+            steps {
+                checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/Rychard-Famichou/TestSwaggerEndpointCRUD.git']])
+            }
+        }
         stage('version'){
             steps{
                 sh 'python --version'
